--- a/bower.json
+++ b/bower.json
@@ -1,4 +1,13 @@
 {
   "name": "goodies",
-  "version": "1.0.0"
+  "version": "1.0.0",
+  "ignore": [
+    "**/.*",
+    "node_modules",
+    "components",
+    "bower_components",
+    "test",
+    "tests",
+    "src"
+  ]
 }
