--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "goodies",
-  "title": "Goodies",
+  "name": "mini-utils",
+  "title": "Mini-utils",
   "description": "Utilities for browser development.",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "author": {
     "name": "Giorgio Leveroni"
   },
